--- a/admin.html
+++ b/admin.html
@@ -276,31 +276,60 @@ async function loadBills(){
 
 /* ---------- EXPORT (UTF-8 BOM FIX) ---------- */
 async function exportExcel(){
-  const d=billDate.value; if(!d) return;
-  const {start,end}=thaiRange(d);
+  const d = billDate.value;
+  if(!d) return;
 
-  const { data:orders } = await db
+  const { start, end } = thaiRange(d);
+
+  const { data: orders } = await db
     .from('orders')
     .select(`
-      order_items!order_items_order_id_fkey(product_name,qty,price)
+      order_items!order_items_order_id_fkey(
+        product_name,
+        qty,
+        price,
+        options
+      )
     `)
-    .gte('created_at',start)
-    .lte('created_at',end);
+    .gte('created_at', start)
+    .lte('created_at', end);
 
-  let rows=[['สินค้า','จำนวน','รวม']];
-  orders.forEach(o=>{
-    o.order_items.forEach(i=>{
-      rows.push([i.product_name,i.qty,i.qty*i.price]);
+  // 🔥 FIX SCHEMA ให้ตายตัว
+  let rows = [
+    ['สินค้า', 'ตัวเลือก', 'จำนวน', 'รวม']
+  ];
+
+  orders.forEach(o => {
+    o.order_items.forEach(i => {
+      rows.push([
+        i.product_name,
+        i.options || '',
+        i.qty,
+        i.qty * i.price
+      ]);
     });
   });
 
-  const csvContent = '\ufeff' + rows.map(r=>r.join(',')).join('\n');
-  const blob = new Blob([csvContent], { type:'text/csv;charset=utf-8;' });
-  const a=document.createElement('a');
-  a.href=URL.createObjectURL(blob);
-  a.download=`ยอดขาย_${d}.csv`;
+  // 🔥 FIX ภาษาไทย Excel
+  const csvContent =
+    '\ufeff' +
+    rows
+      .map(r =>
+        r.map(v => `"${String(v).replace(/"/g,'""')}"`).join(',')
+      )
+      .join('\n');
+
+  const blob = new Blob(
+    [csvContent],
+    { type:'text/csv;charset=utf-8;' }
+  );
+
+  const a = document.createElement('a');
+  a.href = URL.createObjectURL(blob);
+  a.download = `ยอดขาย_${d}.csv`;
   a.click();
 }
+
 
 /* ---------- CHART ---------- */
 function drawChart(orders){
