--- a/admin.html
+++ b/admin.html
@@ -281,10 +281,12 @@ async function exportExcel(){
 
   const { start, end } = thaiRange(d);
 
-  const { data: orders } = await db
+  const { data: orders, error } = await db
     .from('orders')
     .select(`
-      order_items!order_items_order_id_fkey(
+      id,
+      created_at,
+      order_items!order_items_order_id_fkey (
         product_name,
         qty,
         price,
@@ -294,12 +296,26 @@ async function exportExcel(){
     .gte('created_at', start)
     .lte('created_at', end);
 
-  // 🔥 FIX SCHEMA ให้ตายตัว
+  // 🔴 กัน error
+  if(error){
+    console.error(error);
+    Swal.fire('Export ไม่สำเร็จ', error.message, 'error');
+    return;
+  }
+
+  if(!orders || orders.length === 0){
+    Swal.fire('ไม่มีข้อมูล', 'ไม่พบบิลในวันที่เลือก', 'info');
+    return;
+  }
+
+  // ✅ FIX schema ให้ตายตัว
   let rows = [
     ['สินค้า', 'ตัวเลือก', 'จำนวน', 'รวม']
   ];
 
   orders.forEach(o => {
+    if(!o.order_items) return;   // กัน null
+
     o.order_items.forEach(i => {
       rows.push([
         i.product_name,
@@ -310,7 +326,7 @@ async function exportExcel(){
     });
   });
 
-  // 🔥 FIX ภาษาไทย Excel
+  // ✅ FIX ภาษาไทย + คอลัมน์ไม่ล้น
   const csvContent =
     '\ufeff' +
     rows
@@ -329,6 +345,7 @@ async function exportExcel(){
   a.download = `ยอดขาย_${d}.csv`;
   a.click();
 }
+
 
 
 /* ---------- CHART ---------- */
